--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "@vercel/analytics": "^1.5.0",
     "next": "16.0.3",
     "react": "19.2.0",
